 - moved to singular table names (mamba/goffy)
 - create nicer mysql.sql (goffy)
 - added trailing '_text' for output of prepared text (goffy)
 - fixed bugs with foreach in tpl caused by singular table names (goffy)
 - added devtool for removing prefix from table field names (mamba/goffy)
 - moved meta description from language file to module config (goffy)
 
<h5>3.7.0 Alpha   [2023-07-06]</h5>  Dev: XOOPS 2.5.11 RC2, PHP 8.0
 - implemented smarty 3 (zivXP/goffy)
 - fixed bug in creation if search.inc.php (zivXP/goffy)

<h5>3.6.0 Stable   [2023-02-28]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.25, PHP 8.0.12, PHP 8.1.0 Beta 4
 - moved to last stable with smarty 2 (goffy)

<h5>3.6.0 Beta 1   [NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.25, PHP 8.0.12, PHP 8.1.0 Beta 4
- added import of existing modules (for their redesign) (mamba)
- increased size of the "mod_version" field in modulebuilder_modules table from 4 to 10 (mamba)
- refactored import to a class (mamba)
- template usage (goffy)
- add result handling (goffy)
- fixed bug in class handler creation (jjdai/goffy)
- increasing field size (mamba/goffy)
- fixed bug in class utility (jjdai/goffy)
- removed empty items from autor info (mjoel/goffy)
- added block spotlight (liomj/goffy)
- fixed bug in field size (liomj/goffy)
- fixed bug in permissionUpload (liomj/goffy)
- code cleaning (PS inspect code) (goffy)
- fixed bug in guests (goffy)
- removed redundant params from Request (goffy)
- replaced Common/XoopsConfirm by Common/Confirm(mamba/goffy)
- table renaming in fieldelements (goffy)
- added new fieldelements integer/float (goffy)
- uninstall with bak-file creation (mamba/goffy)
- module update to php8 (mamba)
- fix bug in type cast (liomj/goffy)
- removed unnecessary sprintf (goffy)
- replace ternary expression by condition (goffy)
- using same param name during inheritance (goffy)
- fixed bug in update function (liomj/goffy)
