@@ -6,6 +6,7 @@
  - fixed bugs with foreach in tpl caused by singular table names (goffy)
  - added devtool for removing prefix from table field names (mamba/goffy)
  - moved meta description from language file to module config (goffy)
+ - added new fieldelement 'RadioOnoffline' (goffy)
  
 <h5>3.7.0 Alpha   [2023-07-06]</h5>  Dev: XOOPS 2.5.11 RC2, PHP 8.0
  - implemented smarty 3 (zivXP/goffy)
